--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,8 @@
   "type": "commonjs",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "mongodb": "^6.18.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
