npm i vue @vitejs/plugin-vue

--- a/client/package.json
+++ b/client/package.json
@@ -13,8 +13,10 @@
   },
   "dependencies": {
     "@a1rth/css-normalize": "^1.2.1",
+    "@vitejs/plugin-vue": "^6.0.1",
     "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "vue": "^3.5.19"
   },
   "description": "",
   "main": "vite.config.js",
