--- a/client/package.json
+++ b/client/package.json
@@ -9,13 +9,12 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "sass": "^1.90.0",
     "vite": "^7.0.4"
   },
   "dependencies": {
     "@a1rth/css-normalize": "^1.2.1",
     "@vitejs/plugin-vue": "^6.0.1",
-    "cors": "^2.8.5",
-    "express": "^5.1.0",
     "vue": "^3.5.19"
   },
   "description": "",
