--- a/client/package.json
+++ b/client/package.json
@@ -13,8 +13,11 @@
   },
   "dependencies": {
     "@a1rth/css-normalize": "^1.2.1",
+    "@vitejs/plugin-react": "^5.1.0",
     "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0"
   },
   "description": "",
   "main": "vite.config.js",
