--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "sass-embedded": "^1.93.3",
     "vite": "^7.0.4"
   },
   "dependencies": {
